Changed to saving file with stance vectors as a pkl to make importing easier

--- a/stance-vectors/stance_vector.ipynb
+++ b/stance-vectors/stance_vector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,35 +95,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We've had a lot of discussion about the millions of potential workers who are not in the workforce because of disability claims--as Governor Quarles mentioned--and we also talked a lot about the millions of workers who were previously incarcerated who have a labor force participation rate substantially below the U.S. average.\n",
-      "[(4, 0.1717), (27, 0.0327), (33, 0.0372)]\n",
-      "That shows you how much demand there is for more hair!\n",
-      "[(38, 0.0408)]\n",
-      "The employment of these workers has added another 1/2 percentage point to GDP growth.\n",
-      "[(0, 0.0302)]\n",
-      "You keep taking actions to keep inflation close to target, and then, when you run a regression, you find that it is only lagged inflation that matters, because the policymaker is taking appropriate action to keep inflation near target.\n",
-      "[(6, 0.0884), (19, 0.0358)]\n",
-      "Moreover, the size of the New England labor force has leveled off this year after several years of expansion.\n",
-      "[(1, 0.0385)]\n",
-      "I do not support price-level targeting, but I do believe that whatever benefits nominal income targeting in the form presented in the July Tealbook might bring would easily be better achieved by a policy that targets the price-level path.\n",
-      "[(6, 0.0482), (10, 0.0365)]\n",
-      "But, again, that is tricky to argue about at the table, so I guess I am fine.\n",
-      "[(12, 0.0361)]\n",
-      "The minutes of this meeting will reveal that we've had this discussion, and, as the staff memo suggests, it could be used to indicate the Committee's intentions with respect to the cap.\n",
-      "[(23, 0.0732)]\n",
-      "I've been worried during the last few years that the Committee's promises to stay low for a long time were inadvertently sending a very pessimistic signal about the future of the U.S. economy.\n",
-      "[(6, 0.0302), (19, 0.0579), (23, 0.0353)]\n",
-      "The risk of being too late to tighten is exceedingly small, even allowing for time to change language and to evolve to warning markets, if that becomes necessary, and if we are a little too late we can always tighten more vigorously.\n",
-      "[(14, 0.0339), (32, 0.0427)]\n",
-      "Commercial real estate markets continue to suffer from weak demand, and there are few signs that that will change anytime soon.\n",
-      "[(1, 0.0525), (17, 0.0423), (21, 0.0356)]\n"
+      "I'll insert the good news here.\n",
+      "[(18, 0.0307)]\n",
+      "If the economy performs more like the outcomes envisioned in the Tealbook forecast, we will need to consider more frequent increases than every other meeting by the middle of this year.\n",
+      "[(44, 0.0345)]\n",
+      "We usually think about it in terms of monetary impulses affecting both--sometimes not real things, sometimes real things.\n",
+      "[(18, 0.0309)]\n",
+      "I am concerned that, as we pursue the business of, in essence, subsidizing risk--trying to lower the premiums by providing accommodation--in the globalized community, we may be, in fact, subsidizing job creation elsewhere rather than here in the United States.\n",
+      "[(18, 0.0588), (19, 0.0327), (33, 0.0321)]\n",
+      "In fact, internally generated cash flow has been greater than capital expenditures for several quarters now.\n",
+      "[(22, 0.0414)]\n",
+      "For example, in the process of settling our family's housing situation, I spent quite a bit of time looking at the Zillow website, which is chock-full of valuable information regarding developments and prospects for the housing market.\n",
+      "[(32, 0.0366), (34, 0.0326)]\n",
+      "President George.\n",
+      "[(4, 0.0355)]\n",
+      "I hope I delivered.\n",
+      "[(20, 0.0302)]\n",
+      "A major shopping center developer and operator scaled back his expectations for the second half of this year and now thinks that spending will be softer than in the first half.\n",
+      "[(17, 0.0391), (39, 0.0366)]\n",
+      "Well, as just about everyone has said--and I certainly agree--the near-term outlook is grim.\n",
+      "[(7, 0.039), (28, 0.032)]\n",
+      "The equity markets are overpriced in my view, but the strong flow into equity mutual funds, which was very substantial in February and appears to have been very strong in March, could well push equity prices even higher.\n",
+      "[(8, 0.0594)]\n",
+      "Although we can't measure the latter with any precision, those estimates of equilibrium have to be substantially lower than normal because of what is happening in financial markets.\n",
+      "[(44, 0.0329)]\n"
      ]
     }
    ],
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +194,7 @@
        "       'parry', 'phillips', 'stern', 'syron'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +525,7 @@
        "28         Boston     0.0  Greenspan   5.095890       1.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +818,7 @@
        "[5921 rows x 13 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +882,7 @@
        "Name: avg_expd, Length: 5921, dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1367,7 @@
        "[5921 rows x 21 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1877,7 @@
        "[5894 rows x 27 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1901,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mfdff.to_csv('../working-csvs/mfdff.csv')"
+    "# mfdff.to_csv('../working-csvs/mfdff.csv')\n",
+    "mfdff.to_pickle('../working-csvs/mfdff.pkl')"
    ]
   }
  ],
