Fixed to use the right date column, fixed filename spelling

--- a/regressions/greenbook/prepare_greenbook.ipynb
+++ b/regressions/greenbook/prepare_greenbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gb[['GBdate', 'UNEMPF0', 'gPPCEF0']].to_csv('../../working-csvs/greebook.csv')"
+    "gb[['merge_date', 'UNEMPF0', 'gPPCEF0']].to_csv('../../working-csvs/greenbook.csv')"
    ]
   }
  ],
