Reran selection procedure after fixing error with interim presidents' experience

--- a/external-validity/match_projections.ipynb
+++ b/external-validity/match_projections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "[676 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "[2752 rows x 15 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,27 +723,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "221     pianalto\n",
-       "222     pianalto\n",
-       "223     pianalto\n",
-       "224     pianalto\n",
-       "322         duke\n",
-       "          ...   \n",
-       "2387    mullinix\n",
-       "2388    mullinix\n",
-       "2389    mullinix\n",
-       "2390    mullinix\n",
-       "2391    mullinix\n",
-       "Name: speaker, Length: 160, dtype: object"
+       "89       evans\n",
+       "90       evans\n",
+       "91       evans\n",
+       "170      warsh\n",
+       "171      warsh\n",
+       "         ...  \n",
+       "2447    yellen\n",
+       "2448    yellen\n",
+       "2449    yellen\n",
+       "2450    yellen\n",
+       "2451    yellen\n",
+       "Name: speaker, Length: 245, dtype: object"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1193,7 @@
        "[2752 rows x 143 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1601,7 @@
        "[446 rows x 45 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
        "  <th>Date:</th>             <td>Thu, 04 Apr 2024</td> <th>  Prob (F-statistic):</th>  <td> 0.534</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>06:47:30</td>     <th>  Log-Likelihood:    </th> <td> -506.14</td>\n",
+       "  <th>Time:</th>                 <td>07:36:21</td>     <th>  Log-Likelihood:    </th> <td> -506.14</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   446</td>      <th>  AIC:               </th> <td>   1098.</td>\n",
@@ -1814,7 +1814,7 @@
        "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &    -0.003   \\\\\n",
        "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &    0.9665   \\\\\n",
        "\\textbf{Date:}             & Thu, 04 Apr 2024 & \\textbf{  Prob (F-statistic):} &    0.534    \\\\\n",
-       "\\textbf{Time:}             &     06:47:30     & \\textbf{  Log-Likelihood:    } &   -506.14   \\\\\n",
+       "\\textbf{Time:}             &     07:36:21     & \\textbf{  Log-Likelihood:    } &   -506.14   \\\\\n",
        "\\textbf{No. Observations:} &         446      & \\textbf{  AIC:               } &     1098.   \\\\\n",
        "\\textbf{Df Residuals:}     &         403      & \\textbf{  BIC:               } &     1275.   \\\\\n",
        "\\textbf{Df Model:}         &          42      & \\textbf{                     } &             \\\\\n",
@@ -1896,7 +1896,7 @@
        "Model:                            OLS   Adj. R-squared:                 -0.003\n",
        "Method:                 Least Squares   F-statistic:                    0.9665\n",
        "Date:                Thu, 04 Apr 2024   Prob (F-statistic):              0.534\n",
-       "Time:                        06:47:30   Log-Likelihood:                -506.14\n",
+       "Time:                        07:36:21   Log-Likelihood:                -506.14\n",
        "No. Observations:                 446   AIC:                             1098.\n",
        "Df Residuals:                     403   BIC:                             1275.\n",
        "Df Model:                          42                                         \n",
@@ -1964,7 +1964,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 32,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1982,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2001,7 +2001,7 @@
        "13"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2053,7 @@
        "23"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2098,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2111,7 +2111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2126,7 +2126,7 @@
        "      dtype='object', length=124)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2137,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2168,7 +2168,7 @@
        "Name: final_diff_exp_norm, Length: 2340, dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2179,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
